# Tests

./: .gitignore  CMakeLists.txt  README.md  create_project_Version2.sh  customtextedit.cpp  customtextedit.h  dbmanager.cpp  dbmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h  questions.db  testrunner.cpp  testrunner.h  tests.db
_codeql_build_dir/: CMakeCache.txt  cmake_install.cmake
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/QtTestMaker_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/QtTestMaker_autogen/EWIEGA46WW/: moc_customtextedit.cpp.d  moc_mainwindow.cpp.d  moc_testrunner.cpp.d
